--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         function redirectToServer() {
     var urlIn = document.getElementById("ipInput").value.trim();
-    var url = "http://" + urlIn + ":5050"
+    var url = "http://" + urlIn + ""
 
     // Attempt to open the provided URL
     window.location.href = url;
